--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cory Z — UX & Product Designer</title>
+  <title>Corien Zavod — UX & Product Designer</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@
     <div class="container header-inner">
       <div class="logo">
         <span class="logo-mark">CZ</span>
-        <span class="logo-text">Cory Z</span>
+        <span class="logo-text">Corien Zavod</span>
       </div>
 
       <nav class="nav">
@@ -38,7 +38,7 @@
           <p class="hero-kicker">UX • Product • Front-end</p>
           <h1>Designing clear, human-centered experiences.</h1>
           <p class="hero-subtitle">
-            I’m Cory, a Human-Centered Design & Development student at Penn State,
+            I’m Corien, a Human-Centered Design & Development student at Penn State,
             focused on turning messy real-world problems into intuitive digital
             products through research, UX design, and front-end development.
           </p>
@@ -257,8 +257,8 @@
         </div>
 
         <div class="resume-panel">
-          <!-- Update href to your actual PDF path, e.g. assets/CoryZ_Resume.pdf -->
-          <a href="assets/CoryZ_Resume.pdf" class="btn primary" target="_blank" rel="noopener">
+          <!-- Update href to your actual PDF path, e.g. assets/CorienZavod_Resume.pdf -->
+          <a href="assets/CorienZavod_Resume.pdf" class="btn primary" target="_blank" rel="noopener">
             Download resume
           </a>
           <p class="resume-note">
@@ -282,9 +282,8 @@
         </div>
 
         <div class="contact-actions">
-          <!-- Replace with your real email + LinkedIn -->
-          <a href="mailto:your.email@psu.edu" class="btn primary">Email me</a>
-          <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener" class="btn ghost">
+          <a href="mailto:corienzavod@gmail.com" class="btn primary">Email me</a>
+          <a href="https://www.linkedin.com/in/corien-zavod/" target="_blank" rel="noopener" class="btn ghost">
             View LinkedIn
           </a>
         </div>
@@ -294,7 +293,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <span>© <span id="year"></span> Cory Z. All rights reserved.</span>
+      <span>© <span id="year"></span> Corien Zavod. All rights reserved.</span>
       <span class="footer-links">
         <a href="#top">Back to top ↑</a>
       </span>
