--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 
         <div class="resume-panel">
           <!-- Update href to your actual PDF path, e.g. assets/CorienZavod_Resume.pdf -->
-          <a href="assets/CorienZavod_Resume.pdf" class="btn primary" target="_blank" rel="noopener">
-            Download resume
-          </a>
+          <a href="assets/Corien_Zavod_Resume12.04.pdf" class="btn primary" target="_blank" rel="noopener">
+  Download resume
+</a>
           <p class="resume-note">
             <strong>Tip:</strong> If this link doesn’t work yet, I’m probably
             updating my resume. Feel free to email me and I’ll send it directly.
