--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
         <div class="hero-panel">
           <div class="hero-card">
-            <p class="hero-card-label">Currently</p>
-            <p class="hero-card-title">Mobile Developer @ Propvia</p>
-            <p class="hero-card-body">
-              Designing and building a property analytics mobile app with React
-              Native, bringing web experiences to mobile in a more focused,
-              on-the-go format.
-            </p>
+            <p class="hero-card-label">Most Recent Role</p>
+<p class="hero-card-title">Mobile Developer Intern @ Propvia (Jun–Sep 2025)</p>
+<p class="hero-card-body">
+  Designed and built features for Propvia’s property analytics mobile
+  app using React Native, contributing to improved usability and a more
+  streamlined on-the-go experience.
+</p>
           </div>
 
           <div class="hero-tags">
@@ -164,7 +164,7 @@
               <li>Refined interactions based on internal user feedback</li>
             </ul>
             <div class="project-footer">
-              <span class="project-role">Role: UX Engineer / Mobile Dev</span>
+              <span class="project-role">Role: Mobile Developer Intern - Team Lead (Jun–Sep 2025)</span>
               <!-- Replace # with real case study link later -->
               <a href="#" class="project-link">View full case study ↗</a>
             </div>
@@ -275,8 +275,8 @@
         <div>
           <h2>Let’s talk</h2>
           <p>
-            I’m open to internships, junior UX / product roles, and
-            collaborations. If you have a problem that needs better UX (or just
+            I’m open to full-time UX / product design roles, UX engineering roles,
+and collaborations. If you have a problem that needs better UX (or just
             want to chat about design), I’d love to hear from you.
           </p>
         </div>
