--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <!-- Project 1 -->
           <article class="project-card">
             <div class="project-meta">
-              <span class="pill">Case Study</span>
+              <span class="pill">Academic Project</span>
               <span class="pill pill-soft">UX • Product • Research</span>
             </div>
             <h3>ClearPath — Event crowd navigation app</h3>
@@ -149,7 +149,7 @@
           <!-- Project 2 -->
           <article class="project-card">
             <div class="project-meta">
-              <span class="pill">Case Study</span>
+              <span class="pill">Professional Work</span>
               <span class="pill pill-soft">UX • Analytics • Mobile</span>
             </div>
             <h3>Propvia Mobile — Property analytics on the go</h3>
@@ -173,7 +173,7 @@
           <!-- Project 3 -->
           <article class="project-card">
             <div class="project-meta">
-              <span class="pill">Academic</span>
+              <span class="pill">Academic Project</span>
               <span class="pill pill-soft">UX • Research • Prototype</span>
             </div>
             <h3>CrowdCadence — Store traffic tracking</h3>
