--- a/index.html
+++ b/index.html
@@ -122,29 +122,38 @@
 
         <div class="projects-grid">
           <!-- Project 1 -->
-          <article class="project-card">
-            <div class="project-meta">
-              <span class="pill">Academic Project</span>
-              <span class="pill pill-soft">UX • Product • Research</span>
-            </div>
-            <h3>ClearPath — Event crowd navigation app</h3>
-            <p class="project-summary">
-              Designed a mobile app to reduce confusion and bottlenecks at large
-              events by giving attendees real-time, simple wayfinding and crowd
-              density visualizations.
-            </p>
-            <ul class="project-details">
-              <li>Interviewed event-goers and staff to understand pain points</li>
-              <li>Mapped user journeys from entry to exit</li>
-              <li>Prototyped flows in Figma and ran usability tests</li>
-              <li>Iterated on signage, map clarity, and labeling patterns</li>
-            </ul>
-            <div class="project-footer">
-              <span class="project-role">Role: UX Designer & Researcher</span>
-              <!-- Replace # with real case study link later -->
-              <a href="#" class="project-link">View full case study ↗</a>
-            </div>
-          </article>
+          <!-- Project: Beyond the Field -->
+<article class="project-card">
+  <div class="project-meta">
+    <span class="pill">Project</span>
+    <span class="pill pill-soft">UX • Product • Research</span>
+  </div>
+
+  <h3>Beyond the Field — Campus event navigation app</h3>
+
+  <p class="project-summary">
+    Designed a mobile app to help students navigate campus during high-traffic
+    events like football games. The goal was to reduce congestion and
+    frustration by giving users the fastest, clearest routes in and out of
+    packed areas.
+  </p>
+
+  <ul class="project-details">
+    <li>Conducted interviews and surveys to understand game-day navigation challenges</li>
+    <li>Identified pain points: road closures, heavy traffic, poor service, unclear walking paths</li>
+    <li>Created user flows for optimized travel routes and updated transportation options</li>
+    <li>Built low- to high-fidelity prototypes in Figma</li>
+    <li>Iterated based on usability feedback to improve clarity and reduce confusion</li>
+  </ul>
+
+  <div class="project-footer">
+    <span class="project-role">Role: UX Designer</span>
+    <a href="https://www.figma.com/proto/9hxxUFbKt0qtZ5V6tvNzbF/364W-Hi-fi-prototype?node-id=1-1053&starting-point-node-id=1%3A1053"
+       class="project-link" target="_blank" rel="noopener">
+      View full project ↗
+    </a>
+  </div>
+</article>
 
           <!-- Project 2 -->
           <article class="project-card">
@@ -190,7 +199,10 @@
             <div class="project-footer">
               <span class="project-role">Role: UX Designer</span>
               <!-- Replace # with real case study link later -->
-              <a href="#" class="project-link">View full case study ↗</a>
+              <a href="https://www.figma.com/proto/zBtA0T9cZYpsZMkHaetEdC/CrowdCadence-Prototype-1?node-id=348-19&starting-point-node-id=348%3A19"
+   class="project-link" target="_blank" rel="noopener">
+  View full project ↗
+</a>
             </div>
           </article>
         </div>
