--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
             </ul>
             <div class="project-footer">
               <span class="project-role">Role: Mobile Developer Intern - Team Lead (Jun–Sep 2025)</span>
-              <!-- Replace # with real case study link later -->
-              <a href="#" class="project-link">View full case study ↗</a>
+             
+              <a href="https://www.propvia.com/"
+   class="project-link"
+   target="_blank"
+   rel="noopener">
+  Visit Propvia website ↗
+</a>
             </div>
           </article>
 
