--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
             <p class="hero-card-label">Most Recent Role</p>
 <p class="hero-card-title">Mobile Developer Intern @ Propvia (Jun–Sep 2025)</p>
 <p class="hero-card-body">
-  Designed and built features for Propvia’s property analytics mobile
-  app using React Native, contributing to improved usability and a more
-  streamlined on-the-go experience.
+  Designed and built features for Propvia’s property analytics mobile app
+  using React Native, contributing to improved usability and a streamlined
+  on-the-go experience. The application also leverages AI to evaluate
+  properties and provide users with data-driven investment guidance.
 </p>
           </div>
 
@@ -163,10 +164,11 @@
             </div>
             <h3>Propvia Mobile — Property analytics on the go</h3>
             <p class="project-summary">
-              Helped translate Propvia’s web experience into a streamlined
-              mobile app, focusing on quick property insights and simple
-              navigation for investors.
-            </p>
+  Helped translate Propvia’s web experience into a streamlined mobile app,
+  focusing on quick property insights, simple navigation, and AI-powered
+  recommendations for investors. The platform uses AI to analyze properties,
+  surface key risks, and provide personalized investment insights.
+</p>
             <ul class="project-details">
               <li>Collaborated with designers to adapt the design system to mobile</li>
               <li>Implemented key flows using React Native & Expo</li>
