--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
               <li>Collaborated with designers to adapt the design system to mobile</li>
               <li>Implemented key flows using React Native & Expo</li>
               <li>Refined interactions based on internal user feedback</li>
+              <li>Integrated AI-powered analytics and insights into the mobile experience</li>
             </ul>
             <div class="project-footer">
               <span class="project-role">Role: Mobile Developer Intern - Team Lead (Jun–Sep 2025)</span>
