--- a/index.html
+++ b/index.html
@@ -228,15 +228,16 @@
         <div class="skills-layout">
           <div>
             <h3>UX & Product</h3>
-            <div class="chip-row">
-              <span class="chip">User Interviews</span>
-              <span class="chip">Journey Mapping</span>
-              <span class="chip">Information Architecture</span>
-              <span class="chip">Wireframing</span>
-              <span class="chip">Prototyping</span>
-              <span class="chip">Usability Testing</span>
-              <span class="chip">Heuristic Evaluation</span>
-            </div>
+<div class="chip-row">
+  <span class="chip">User Interviews</span>
+  <span class="chip">Journey Mapping</span>
+  <span class="chip">Information Architecture</span>
+  <span class="chip">Wireframing</span>
+  <span class="chip">Prototyping</span>
+  <span class="chip">Usability Testing</span>
+  <span class="chip">Heuristic Evaluation</span>
+  <span class="chip">AI-assisted Product Design</span>
+</div>
           </div>
 
           <div>
@@ -251,19 +252,57 @@
           </div>
 
           <div>
-            <h3>Development</h3>
-            <div class="chip-row">
-              <span class="chip">HTML</span>
-              <span class="chip">CSS</span>
-              <span class="chip">JavaScript</span>
-              <span class="chip">React</span>
-              <span class="chip">React Native</span>
-              <span class="chip">GitHub</span>
-            </div>
-          </div>
+  <h3>Development</h3>
+  <div class="chip-row">
+    <span class="chip">HTML</span>
+    <span class="chip">CSS</span>
+    <span class="chip">JavaScript</span>
+    <span class="chip">React</span>
+    <span class="chip">React Native</span>
+    <span class="chip">GitHub</span>
+    <span class="chip">AI Workflows</span>
+  </div>
+</div>
         </div>
       </div>
     </section>
+
+    <!-- Blog / Writing -->
+<section id="blog" class="section">
+  <div class="container">
+    <div class="section-header">
+      <h2>Writing</h2>
+      <p>Short reflections on UX, AI, and product work.</p>
+    </div>
+
+    <div class="projects-grid">
+      <article class="project-card">
+        <div class="project-meta">
+          <span class="pill">Article</span>
+          <span class="pill pill-soft">UX • AI • Product</span>
+        </div>
+
+        <h3>Designing AI-assisted property insights at Propvia</h3>
+
+        <p class="project-summary">
+          A behind-the-scenes look at how I worked on Propvia’s property
+          analytics experience as a Mobile Developer Intern — and how we used
+          AI to turn complex data into simple, useful guidance for investors.
+        </p>
+
+        <div class="project-footer">
+          <span class="project-role">Published: 2025</span>
+          <a href="blog-ai-propvia.html"
+             class="project-link"
+             target="_blank"
+             rel="noopener">
+            Read article ↗
+          </a>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
 
     <!-- Resume -->
     <section id="resume" class="section">
