--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="#about">About</a>
         <a href="#work">Work</a>
         <a href="#skills">Skills</a>
+        <a href="#blog">Blog</a>
         <a href="#resume">Resume</a>
         <a href="#contact" class="nav-cta">Contact</a>
       </nav>
@@ -271,8 +272,8 @@
 <section id="blog" class="section">
   <div class="container">
     <div class="section-header">
-      <h2>Writing</h2>
-      <p>Short reflections on UX, AI, and product work.</p>
+      <h2>Blog</h2>
+      <p>My reflections on UX, AI, and product design.</p>
     </div>
 
     <div class="projects-grid">
