--- a/blog-ai-propvia.html
+++ b/blog-ai-propvia.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <a href="index.html#work">Work</a>
         <a href="index.html#skills">Skills</a>
-        <a href="index.html#blog">Writing</a>
+        <a href="index.html#blog">Blog</a>
         <a href="index.html#contact" class="nav-cta">Contact</a>
       </nav>
     </div>
@@ -121,7 +121,7 @@
         </p>
 
         <p style="margin-top: 32px;">
-          <a href="index.html#blog" class="project-link">← Back to all writing</a>
+          <a href="index.html#blog" class="project-link">← Back to all blog posts</a>
         </p>
       </div>
     </section>
