--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </ul>
             <div class="project-footer">
               <span class="project-role">Role: UX Designer</span>
-              <!-- Replace # with real case study link later -->
+            
               <a href="https://www.figma.com/proto/zBtA0T9cZYpsZMkHaetEdC/CrowdCadence-Prototype-1?node-id=348-19&starting-point-node-id=348%3A19"
    class="project-link" target="_blank" rel="noopener">
   View full project ↗
@@ -269,7 +269,7 @@
     </section>
 
     <!-- Blog / Writing -->
-<section id="blog" class="section">
+<section id="blog" class="section animate-on-scroll">
   <div class="container">
     <div class="section-header">
       <h2>Blog</h2>
