--- a/index.html
+++ b/index.html
@@ -361,8 +361,35 @@ and collaborations. If you have a problem that needs better UX (or just
   </footer>
 
   <script>
+  document.addEventListener('DOMContentLoaded', () => {
     // Set current year in footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    const yearEl = document.getElementById('year');
+    if (yearEl) {
+      yearEl.textContent = new Date().getFullYear();
+    }
+
+    // Scroll-in animation for sections with .animate-on-scroll
+    const targets = document.querySelectorAll('.animate-on-scroll');
+
+    if ('IntersectionObserver' in window) {
+      const observer = new IntersectionObserver(
+        (entries, obs) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add('is-visible');
+              obs.unobserve(entry.target);
+            }
+          });
+        },
+        { threshold: 0.2 }
+      );
+
+      targets.forEach((el) => observer.observe(el));
+    } else {
+      // Fallback: show them if IntersectionObserver isn't supported
+      targets.forEach((el) => el.classList.add('is-visible'));
+    }
+  });
+</script>
 </body>
 </html>
