--- a/index.html
+++ b/index.html
@@ -276,32 +276,59 @@
       <p>My reflections on UX, AI, and product design.</p>
     </div>
 
-    <div class="projects-grid">
-      <article class="project-card">
-        <div class="project-meta">
-          <span class="pill">Article</span>
-          <span class="pill pill-soft">UX • AI • Product</span>
-        </div>
-
-        <h3>Designing AI-assisted property insights at Propvia</h3>
-
-        <p class="project-summary">
-          A behind-the-scenes look at how I worked on Propvia’s property
-          analytics experience as a Mobile Developer Intern — and how we used
-          AI to turn complex data into simple, useful guidance for investors.
-        </p>
-
-        <div class="project-footer">
-          <span class="project-role">Published: 2025</span>
-          <a href="blog-ai-propvia.html"
-             class="project-link"
-             target="_blank"
-             rel="noopener">
-            Read article ↗
-          </a>
-        </div>
-      </article>
+   <div class="projects-grid">
+  <!-- Article 1: Propvia AI -->
+  <article class="project-card">
+    <div class="project-meta">
+      <span class="pill">Article</span>
+      <span class="pill pill-soft">UX • AI • Product</span>
     </div>
+
+    <h3>Designing AI-assisted property insights at Propvia</h3>
+
+    <p class="project-summary">
+      A behind-the-scenes look at how I worked on Propvia’s property analytics
+      experience as a Mobile Developer Intern — and how we used AI to turn
+      complex data into simple, useful guidance for investors.
+    </p>
+
+    <div class="project-footer">
+      <span class="project-role">Published: 2025</span>
+      <a href="blog-ai-propvia.html"
+         class="project-link"
+         target="_blank"
+         rel="noopener">
+        Read article ↗
+      </a>
+    </div>
+  </article>
+
+  <!-- Article 2: Path into HCD -->
+  <article class="project-card">
+    <div class="project-meta">
+      <span class="pill">Article</span>
+      <span class="pill pill-soft">HCD • Career • Reflection</span>
+    </div>
+
+    <h3>How I found my way into Human-Centered Design</h3>
+
+    <p class="project-summary">
+      A reflection on starting in engineering, realizing I was most excited
+      about the people and product side of technology, and how that led me to
+      Human-Centered Design & Development at Penn State.
+    </p>
+
+    <div class="project-footer">
+      <span class="project-role">Published: 2025</span>
+      <a href="blog-hcdd-path.html"
+         class="project-link"
+         target="_blank"
+         rel="noopener">
+        Read article ↗
+      </a>
+    </div>
+  </article>
+</div>
   </div>
 </section>
 
