--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
     <span class="chip">React Native</span>
     <span class="chip">GitHub</span>
     <span class="chip">AI Workflows</span>
+     <span class="chip">Python</span>
   </div>
 </div>
         </div>
