--- a/blog-ai-propvia.html
+++ b/blog-ai-propvia.html
@@ -110,14 +110,15 @@
 
         <p>
           Working on Propvia showed me how UX, engineering, and AI can come together to
-          solve real problems — not just as a buzzword, but as part of a thoughtful,
+          solve real problems and not just as a buzzword, but as part of a thoughtful,
           human-centered product.
         </p>
 
         <p>
           Going forward, I’m excited to keep exploring how AI can support people’s
-          decision-making without taking control away from them — whether that’s in
-          real estate, event navigation, or whatever problem I get to work on next.
+          decision-making without taking control away from them. Whether it's in
+          real estate, event navigation, or whatever problem I get to work on next, 
+          I'm look forward to seeing where AI takes us.
         </p>
 
         <p style="margin-top: 32px;">
