--- a/blog-hcdd-path.html
+++ b/blog-hcdd-path.html
@@ -37,7 +37,7 @@
         <p class="hero-subtitle">
           I didn’t start out planning to be a UX or product designer. I started
           in engineering, and eventually realized that what I cared about most
-          wasn’t just how systems worked — it was how people experienced them.
+          wasn’t just how systems worked, it was how people experienced them.
         </p>
 
         <p style="color: #9ca3af; font-size: 0.9rem; margin-bottom: 28px;">
@@ -64,7 +64,7 @@
         <h2>Discovering Human-Centered Design</h2>
         <p>
           That’s what eventually led me to Human-Centered Design & Development
-          at Penn State. HCDD felt like the missing piece — a place where
+          at Penn State. HCDD felt like the missing piece. It felt like a place where
           caring about interfaces, flows, and user emotions wasn’t a side habit,
           it was the entire point.
         </p>
@@ -86,9 +86,9 @@
 
         <p>
           I loved the idea that I could design something online that quietly
-          improves someone’s life — whether that’s helping them navigate a busy
+          improves someone’s life. Whether it helped them navigate a busy
           campus, understand a property investment, or just find what they need
-          without thinking too hard.
+          without thinking too hard, I became invested.
         </p>
 
         <h2>Why HCDD feels like the right path</h2>
@@ -100,8 +100,8 @@
         </p>
 
         <p>
-          Today, when I look at the projects in my portfolio — from event
-          navigation to AI-powered property tools — I see the same thread
+          Today, when I look at the projects in my portfolio, from event
+          navigation to AI-powered property tools, I see the same thread
           running through all of them: a focus on real users, real problems, and
           experiences that try to respect people’s time and attention.
         </p>
