--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
           </div>
         </div>
 
-        <div class="hero-panel">
-          <div class="hero-card">
-            <p class="hero-card-label">Most Recent Role</p>
-<p class="hero-card-title">Mobile Developer Intern @ Propvia (Jun–Sep 2025)</p>
-<p class="hero-card-body">
-  Designed and built features for Propvia’s property analytics mobile app
-  using React Native, contributing to improved usability and a streamlined
-  on-the-go experience. The application also leverages AI to evaluate
-  properties and provide users with data-driven investment guidance.
-</p>
-          </div>
+        <div class="hero-media">
+  <div class="hero-photo-frame">
+    <img src="assets/corien-headshot.jpg" alt="Portrait of Corien Zavod" />
+  </div>
+
+  <div class="hero-tags">
+    <span class="tag">UX Research</span>
+    <span class="tag">Prototyping</span>
+    <span class="tag">React Native</span>
+    <span class="tag">Design Systems</span>
+  </div>
+</div>
 
           <div class="hero-tags">
             <span class="tag">UX Research</span>
