--- a/index.html
+++ b/index.html
@@ -97,18 +97,33 @@
           </p>
         </div>
         <div class="about-side">
-          <div class="about-card">
-            <h3>What I’m looking for</h3>
-            <p>
-              UX design / product design / UX engineering roles where I can:
-            </p>
-            <ul>
-              <li>Collaborate with cross-functional teams</li>
-              <li>Run or support user research & testing</li>
-              <li>Ship polished interfaces in production</li>
-            </ul>
-          </div>
-        </div>
+  <div class="about-stack">
+    <!-- Most recent role card -->
+    <div class="hero-card">
+      <p class="hero-card-label">Most Recent Role</p>
+      <p class="hero-card-title">Mobile Developer Intern @ Propvia (Jun–Sep 2025)</p>
+      <p class="hero-card-body">
+        Designed and built features for Propvia’s property analytics mobile app
+        using React Native, contributing to improved usability and a streamlined
+        on-the-go experience. The application also leverages AI to evaluate
+        properties and provide users with data-driven investment guidance.
+      </p>
+    </div>
+
+    <!-- What I'm looking for card -->
+    <div class="about-card">
+      <h3>What I’m looking for</h3>
+      <p>
+        Full-time UX design, product design, or UX engineering roles where I can:
+      </p>
+      <ul>
+        <li>Collaborate with cross-functional teams</li>
+        <li>Run or support user research & testing</li>
+        <li>Ship polished interfaces in production</li>
+      </ul>
+    </div>
+  </div>
+</div>
       </div>
     </section>
 
