--- a/index.html
+++ b/index.html
@@ -83,18 +83,22 @@
       <div class="container split">
         <div>
           <h2>About me</h2>
-          <p>
-            I’m a UX-focused designer and developer who enjoys moving between
-            user research, wireframing, and actually shipping the interface in
-            code. I study Human-Centered Design & Development at Penn State,
-            where I combine UX methods with software engineering.
-          </p>
-          <p>
-            I love working on projects where I can talk to real users, simplify
-            complex flows, and validate ideas quickly through prototypes and
-            usability testing. My goal is to create products that feel
-            straightforward, calm, and genuinely useful.
-          </p>
+         <p>
+  I’m a UX-focused designer and developer who enjoys moving between user
+  research, wireframing, and actually shipping the interface in code. I study
+  Human-Centered Design & Development at Penn State, where I’ve learned how to
+  blend UX thinking with software engineering to build products that not only help, 
+  but truly make sense to the people using them.
+</p>
+
+<p>
+  One of the things I enjoy most is working on projects where I get to talk to real users
+  and understand what’s actually getting in their way. I love taking messy,
+  unclear problems and turning them into something simple. For me, that means creating
+  smoother flows, clearer layouts, or prototypes that finally “click” during
+  testing. At the end of the day, my goal is to create meaningful digital experiences
+  that feel calm, intuitive, and genuinely helpful, not just functional.
+</p>
         </div>
         <div class="about-side">
   <div class="about-stack">
