--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
   testing. At the end of the day, my goal is to create meaningful digital experiences
   that feel calm, intuitive, and genuinely helpful, not just functional.
 </p>
+
+ <p>
+  I’m also a big believer in designing with curiosity, asking questions,
+  exploring multiple directions, and not being afraid to rethink an idea if it
+  leads to something clearer. I truly think it is important to bring a thoughtful, 
+  research-driven approach to every problem I work on.
+</p>
         </div>
         <div class="about-side">
   <div class="about-stack">
