--- a/index.html
+++ b/index.html
@@ -60,13 +60,7 @@
     <img src="assets/corien-headshot.jpg" alt="Portrait of Corien Zavod" />
   </div>
 
-  <div class="hero-tags">
-    <span class="tag">UX Research</span>
-    <span class="tag">Prototyping</span>
-    <span class="tag">React Native</span>
-    <span class="tag">Design Systems</span>
-  </div>
-</div>
+  
 
           <div class="hero-tags">
             <span class="tag">UX Research</span>
@@ -103,7 +97,7 @@
  <p>
   I’m also a big believer in designing with curiosity, asking questions,
   exploring multiple directions, and not being afraid to rethink an idea if it
-  leads to something clearer. I truly think it is important to bring a thoughtful, 
+  leads to something clearer. I truly think it's important to bring a thoughtful, 
   research-driven approach to every problem I work on.
 </p>
         </div>
@@ -119,6 +113,14 @@
         on-the-go experience. The application also leverages AI to evaluate
         properties and provide users with data-driven investment guidance.
       </p>
+    </div>
+
+    <div class="hero-tags" style="margin-top: 10px;">
+        <span class="tag">UX Research</span>
+        <span class="tag">Prototyping</span>
+        <span class="tag">React Native</span>
+        <span class="tag">Design Systems</span>
+      </div>
     </div>
 
     <!-- What I'm looking for card -->
