--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <img src="assets/corien-headshot.jpg" alt="Portrait of Corien Zavod" />
   </div>
 
-   <div class="hero-tags">
+    <div class="hero-tags">
     <span class="tag">UX Research</span>
     <span class="tag">Prototyping</span>
     <span class="tag">React Native</span>
@@ -68,6 +68,15 @@
   </div>
 </div>
 
+          <div class="hero-tags">
+            <span class="tag">UX Research</span>
+            <span class="tag">Prototyping</span>
+            <span class="tag">React Native</span>
+            <span class="tag">Design Systems</span>
+          </div>
+        </div>
+      </div>
+    </section>
           
     <!-- About -->
     <section id="about" class="section">
@@ -110,14 +119,6 @@
         on-the-go experience. The application also leverages AI to evaluate
         properties and provide users with data-driven investment guidance.
       </p>
-    </div>
-
-    <div class="hero-tags" style="margin-top: 10px;">
-        <span class="tag">UX Research</span>
-        <span class="tag">Prototyping</span>
-        <span class="tag">React Native</span>
-        <span class="tag">Design Systems</span>
-      </div>
     </div>
 
     <!-- What I'm looking for card -->
