--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="hero-tags">
     <span class="tag">UX Research</span>
     <span class="tag">Prototyping</span>
-    <span class="tag">React Native</span>
-    <span class="tag">Design Systems</span>
+    <span class="tag">Testing</span>
+    <span class="tag">Design Thinking</span>
   </div>
 </div>
 
