--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <span>📍 Pennsylvania, USA</span>
             <span>🎓 Graduating Spring 2026</span>
           </div>
+          </div>
 
         <div class="hero-tags">
             <span class="tag">UX Research</span>
