--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
   </header>
 
   <main>
-    <!-- Hero -->
+        <!-- Hero -->
     <section class="hero">
       <div class="container hero-inner">
+        <!-- Left side: text -->
         <div class="hero-text">
           <p class="hero-kicker">UX • Product • Front-end</p>
           <h1>Designing clear, human-centered experiences.</h1>
@@ -53,9 +54,9 @@
             <span>📍 Pennsylvania, USA</span>
             <span>🎓 Graduating Spring 2026</span>
           </div>
-          </div>
 
-        <div class="hero-tags">
+          <!-- Tags under the meta line -->
+          <div class="hero-tags">
             <span class="tag">UX Research</span>
             <span class="tag">Prototyping</span>
             <span class="tag">React Native</span>
@@ -63,12 +64,12 @@
           </div>
         </div>
 
+        <!-- Right side: photo -->
         <div class="hero-media">
-  <div class="hero-photo-frame">
-    <img src="assets/corien-headshot.jpg" alt="Portrait of Corien Zavod" />
-  </div>
-
-          
+          <div class="hero-photo-frame">
+            <img src="assets/corien-headshot.jpg" alt="Portrait of Corien Zavod" />
+          </div>
+        </div>
       </div>
     </section>
           
