--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <div class="hero-tags">
             <span class="tag">UX Research</span>
             <span class="tag">Prototyping</span>
-            <span class="tag">React Native</span>
-            <span class="tag">Design Systems</span>
+            <span class="tag">Critical Thinking</span>
+            <span class="tag">Interaction Design</span>
           </div>
         </div>
 
