--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
         <div class="about-side">
   <div class="about-stack">
+
     <!-- Most recent role card -->
     <div class="hero-card">
       <p class="hero-card-label">Most Recent Role</p>
@@ -114,6 +115,14 @@
         on-the-go experience. The application also leverages AI to evaluate
         properties and provide users with data-driven investment guidance.
       </p>
+
+      <!-- ⭐ ADD TAGS HERE (under the role card) -->
+      <div class="hero-tags" style="margin-top: 10px;">
+        <span class="tag">UX Research</span>
+        <span class="tag">Prototyping</span>
+        <span class="tag">React Native</span>
+        <span class="tag">Design Systems</span>
+      </div>
     </div>
 
     <!-- What I'm looking for card -->
@@ -128,6 +137,7 @@
         <li>Ship polished interfaces in production</li>
       </ul>
     </div>
+
   </div>
 </div>
       </div>
