--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
         <div>
           <h2>About me</h2>
          <p>
-  I’m a UX-focused designer and developer who enjoys moving between user
-  research, wireframing, and actually shipping the interface in code. I study
-  Human-Centered Design & Development at Penn State, where I’ve learned how to
+  I’m a UX-focused designer and developer who truly enjoys moving creating meaningful user experiences.
+  I study Human-Centered Design & Development at Penn State, where I’ve learned how to
   blend UX thinking with software engineering to build products that not only help, 
   but truly make sense to the people using them.
 </p>
@@ -89,7 +88,7 @@
 <p>
   One of the things I enjoy most is working on projects where I get to talk to real users
   and understand what’s actually getting in their way. I love taking messy,
-  unclear problems and turning them into something simple. For me, that means creating
+  unclear problems and turning them into something truly simple and helpful. For me, that means creating
   smoother flows, clearer layouts, or prototypes that finally “click” during
   testing. At the end of the day, my goal is to create meaningful digital experiences
   that feel calm, intuitive, and genuinely helpful, not just functional.
@@ -112,7 +111,7 @@
       <p class="hero-card-body">
         Designed and built features for Propvia’s property analytics mobile app
         using React Native, contributing to improved usability and a streamlined
-        on-the-go experience. The application also leverages AI to evaluate
+        portable experience. The application also leverages AI to evaluate
         properties and provide users with data-driven investment guidance.
       </p>
 
@@ -321,7 +320,7 @@
 
     <p class="project-summary">
       A behind-the-scenes look at how I worked on Propvia’s property analytics
-      experience as a Mobile Developer Intern — and how we used AI to turn
+      experience as a Mobile Developer Intern, and how we used AI to turn
       complex data into simple, useful guidance for investors.
     </p>
 
