--- a/blog-ai-propvia.html
+++ b/blog-ai-propvia.html
@@ -46,7 +46,7 @@
         <h2>Starting with a messy, real-world problem</h2>
         <p>
           When I joined Propvia as a Mobile Developer Intern, the goal wasn’t just to
-          ship another app screen — it was to help investors make faster, smarter
+          ship another app screen. My true goal was to help investors make faster, smarter
           decisions about real properties in real neighborhoods. The product pulls in a
           lot of data: vacancy information, risk indicators, neighborhood metrics, and
           more. Without good UX, all of that can quickly turn into noise.
@@ -55,7 +55,7 @@
         <p>
           My job was to help bring Propvia’s web experience to mobile while keeping it
           focused, approachable, and useful in the moments when investors actually need
-          it — on the go, in the field, or between meetings.
+          it on the go, in the field, or between meetings.
         </p>
 
         <h2>Where AI comes in</h2>
