--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div>
           <h2>About me</h2>
          <p>
-  I’m a UX-focused designer and developer who truly enjoys moving creating meaningful user experiences.
+  I’m a UX-focused designer and developer who truly enjoys creating meaningful and seamless user experiences.
   I study Human-Centered Design & Development at Penn State, where I’ve learned how to
   blend UX thinking with software engineering to build products that not only help, 
   but truly make sense to the people using them.
