--- a/blog-hcdd-path.html
+++ b/blog-hcdd-path.html
@@ -49,7 +49,7 @@
           My first step into tech was through engineering. I liked solving
           problems, building things, and understanding how systems fit together.
           But as I progressed, I noticed that the parts of projects that excited
-          me most weren’t the calculations or the specs — they were the moments
+          me most weren’t the calculations or the specs, but instead they were the moments
           where I could think about the person on the other side of the screen.
         </p>
 
@@ -71,7 +71,7 @@
 
         <p>
           I learned how to connect research, design, and development into a
-          single process: talking to users, mapping their journeys, sketching
+          single process: Talking to users, mapping their journeys, sketching
           out solutions, prototyping, and then actually building them. It was
           engineering, but with people fully in the center of every decision.
         </p>
