--- a/blog-hcdd-path.html
+++ b/blog-hcdd-path.html
@@ -94,7 +94,7 @@
         <h2>Why HCDD feels like the right path</h2>
         <p>
           Human-Centered Design & Development gives me a way to bring together
-          everything I care about: the structure and logic of engineering, the
+          everything I care about like the structure and logic of engineering, the
           creativity of design, and the empathy of talking to real people. It’s
           a path where I get to build things that work and feel right.
         </p>
@@ -108,7 +108,7 @@
 
         <p>
           That’s the kind of work I want to keep doing as I move into
-          full-time roles: designing and building digital experiences that are
+          full-time roles. I want to design and build digital experiences that are
           not just functional, but genuinely helpful.
         </p>
 
